sumo/tests/sumo/errors/routes/disconnected_walk/errors.sumo
Error: Disconnected plan for person '4' (left!=beg).
Quitting (on error).
